<resources>
    <string name="app_name" translatable="false">PokeTeam App</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid email</string>
    <string name="invalid_password">Password must be >3 characters</string>
    <string name="login_failed">Email or password are incorrect</string>

    <!-- Strings related to menus -->
    <string name="menu_settings">Settings</string>
    <string name="menu_nav_team">Pokemon Team</string>
    <string name="menu_nav_poke_list">Pokemons List</string>
    <string name="copyright" translatable="false">© Ana Martínez Montañez</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="menu_logout">Sign out</string>

    <!-- Sync Preferences -->
    <string name="title_settings">Settings</string>
    <string name="change_language">Change Language</string>
    <string name="modify_user_data">Modify user data</string>
    <string name="en_US">English</string>
    <string name="es_ES">Spanish</string>

    <!-- Commons -->
    <string name="logout_confirmation">Are you sure you want to logout?</string>
    <string name="logout_confirmation_ok">Yes, logout</string>
    <string name="cancel">Cancel</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="still_not_connected">"Still not connected? "</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_poke_list">Pokemons List</string>
    <string name="title_pokemon_team">My Pokemon Team</string>
    <string name="menu_nav_tutorial">Tutorial</string>
    <string name="menu_nav_about">About</string>
    <string name="information">Information</string>
    <string name="title_about">About</string>
    <string name="app_version" translatable="false">v1.0.0 (Database v4.0.0)</string>
    <string name="app_subject" translatable="false">Desarrollo de Aplicaciones Android</string>
    <string name="app_mimo" translatable="false">Máster Universitario Informática Móvil</string>
    <string name="app_university" translatable="false">Universidad Pontificia de Salamanca</string>
    <string name="app_api_text">This product uses the PokeAPI API.</string>
    <string name="app_api_link" translatable="false"><a href="https://pokeapi.co/">https://pokeapi.co/</a></string>
    <string name="title_tutorial">Tutorial</string>
    <string name="skip">Skip</string>
    <string name="title_forgot_password">New Password</string>
    <string name="prompt_new_password">New password</string>
    <string name="prompt_repeat_new_password">Repeat new password</string>
    <string name="save">Save</string>
    <string name="title_register_user">User Registration</string>
    <string name="prompt_user_name">Name</string>
    <string name="prompt_user_surname">Surname</string>
    <string name="invalid_repeated_password">Passwords must be the same</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="success">Success</string>
    <string name="registration_failed">Registration failed</string>
    <string name="userAlreadyExists">User already exists</string>
    <string name="login_correct">Login correct</string>
    <string name="registration_correct">Registration correct</string>
    <string name="write_here">Write here...</string>
    <string name="have_no_permissions">Profile picture can\'t be added without permissions</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="modify_profile_picture">Set profile picture</string>
    <string name="added_favorite">Added to favorite!</string>
    <string name="favorite_max_reached">You have reached favorites max!</string>
    <string name="already_favorite">Pokemon is already on your team. Please choose another one.</string>
    <string name="pokemonview_types">"Types: "</string>
    <string name="base_experience">"Base Experience: "</string>
    <string name="name">"Name: "</string>
    <string name="swipe_refresh_textview">Please, swipe down to change the pokemon</string>
    <string name="api_pokemon_not_found">Ups! It seems that this pokemon has gone on a walk</string>

</resources>