<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_nav_team"
            android:title="@string/menu_nav_team"
            android:icon="@drawable/ic_round_favorite_24"/>

        <item
            android:id="@+id/menu_nav_poke_list"
            android:title="@string/menu_nav_poke_list"
            android:icon="@drawable/ic_round_catching_pokemon_24"/>
    </group>

    <item android:title="@string/information">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_nav_tutorial"
                    android:title="@string/menu_nav_tutorial"
                    android:icon="@drawable/ic_round_help_24"/>

                <item
                    android:id="@+id/menu_nav_about"
                    android:title="@string/menu_nav_about"
                    android:icon="@drawable/ic_round_info_24"/>
            </group>
        </menu>
    </item>

</menu>