<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/Theme.PokeTeamApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/language_title"
        style="@style/settingsTitlesStylesLight"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_language"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        app:layout_constraintVertical_bias="0.022" />

    <CheckBox
        android:id="@+id/checkBox_language_en"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/en_US"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/language_title"
        app:layout_constraintVertical_bias="0.027" />

    <CheckBox
        android:id="@+id/checkBox_language_es"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/es_ES"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_language_en"
        app:layout_constraintVertical_bias="0.027" />

    <TextView
        android:id="@+id/modify_user_title"
        style="@style/settingsTitlesStylesLight"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/modify_user_data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_language_es"
        app:layout_constraintVertical_bias="0.026" />

    <EditText
        android:id="@+id/modify_user_email"
        style="@style/editTextStyles"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:hint="@string/write_here"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:text="@string/prompt_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/my_toolbar"
        app:layout_constraintTop_toBottomOf="@+id/modify_user_title"
        app:layout_constraintVertical_bias="0.036" />

    <EditText
        android:id="@+id/modify_user_password"
        style="@style/editTextStyles"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:hint="@string/write_here"
        android:inputType="textVisiblePassword"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:selectAllOnFocus="true"
        android:text="@string/prompt_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modify_user_email"
        app:layout_constraintVertical_bias="0.051" />

    <ImageView
        android:id="@+id/profile_picture_settings"
        style="@style/settingsStylesLight"
        android:layout_width="124dp"
        android:layout_height="124dp"
        android:src="@drawable/ic_round_account_circle_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/modify_user_password"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/modify_user_password"
        app:layout_constraintTop_toBottomOf="@+id/modify_user_password"
        app:layout_constraintVertical_bias="0.141" />

    <Button
        android:id="@+id/save_changes"
        style="@style/buttonSaveStyles"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:text="@string/save"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/modify_user_password"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="@+id/modify_user_password"
        app:layout_constraintTop_toBottomOf="@+id/profile_picture_settings"
        app:layout_constraintVertical_bias="0.24" />

</androidx.constraintlayout.widget.ConstraintLayout>